force-app/main/default/objects/ProposalCover__c/ProposalCover__c.object-meta.xml
<CustomObject>
    <label>Capa de Proposta</label>
    <nameField>
        <label>Nome de Capa de Proposta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capa de Propostas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>