force-app/main/default/objects/ProposalCover__c/fields/BackCoverImageId__c.field-meta.xml
<CustomField>
    <fullName>BackCoverImageId__c</fullName>
    <label>Imagem de Contracapa (ContentDocumentId)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>