force-app/main/default/objects/ProposalCover__c/fields/CoverImageId__c.field-meta.xml
<CustomField>
    <fullName>CoverImageId__c</fullName>
    <label>Imagem de Capa (ContentDocumentId)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>