force-app/main/default/objects/ProposalCover__c/fields/GrupoDeProdutos__c.field-meta.xml
<CustomField>
    <fullName>GrupoDeProdutos__c</fullName>
    <label>Grupo de produtos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ezee Connect</fullName>
            </value>
            <value>
                <fullName>Ezee Solar</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>