force-app/main/default/objects/ProposalCover__c/fields/IntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>IntegrationKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Chave funcional que identifica o conjunto de tags e seções configuradas para esta capa no sistema de geração de propostas via API. Obrigatória quando &quot;URL do Template&quot; estiver preenchida. Valores conhecidos: GRUPO_B_PADRAO. Sem este campo, a geração via API falhará.</description>
    <externalId>true</externalId>
    <label>Integration Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>