force-app/main/default/objects/ProposalCover__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Padrão ?</label>
    <type>Checkbox</type>
</CustomField>