force-app/main/default/objects/ProposalCover__c/fields/isPromotional__c.field-meta.xml
<CustomField>
    <fullName>isPromotional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promocional</label>
    <type>Checkbox</type>
</CustomField>