force-app/main/default/objects/ProposalCover__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ModeloPropostaA</fullName>
            </value>
            <value>
                <fullName>ModeloPropostaB</fullName>
            </value>
            <value>
                <fullName>ModeloPropostaBowe</fullName>
            </value>
            <value>
                <fullName>ModeloPropostaEzeeConnect</fullName>
            </value>
            <value>
                <fullName>WorkDeliveryReportPdf</fullName>
                <isActive>false</isActive>
                <label>WorkDeliveryReportPdf</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>