force-app/main/default/objects/ProposalCover__c/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <label>Nome do Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>