force-app/main/default/objects/ProposalCover__c/fields/TemplateUrl__c.field-meta.xml
<CustomField>
    <fullName>TemplateUrl__c</fullName>
    <label>URL do Template</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>