force-app/main/default/objects/ProposalCover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>IsDefault__c</columns>
    <columns>isPromotional__c</columns>
    <columns>GrupoTarifario__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>